mon/ConnectionTracker.cc: disregard connection scores from mon_rank = -1

There are certain situations where we would
come across rank -1 in our MON connection scores;

- New MON sends probe message to existing MON,
existing MON handle probe message by adding -1
to existing peer_scores.

This is not good because we want to implement
a connection scores check mechanism where we
should not have to take into account the possibility
of having rank -1 in our score.

Fixes: https://tracker.ceph.com/issues/59564

Signed-off-by: Kamoltat <ksirivad@redhat.com>